--- a/frontend/src/components/atoms/teamImages.css
+++ b/frontend/src/components/atoms/teamImages.css
@@ -12,6 +12,10 @@
     border-radius: 10px;
     overflow: hidden;
     margin-inline: 3px;
+    border: 2px solid black;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
 }
 .overflow {
     display: flex;
@@ -23,6 +27,7 @@
 }
 .champion-image {
     width: 100%;
+    display: flex;
 }
 
 @media (min-width: 768px) {
