--- a/frontend/src/components/molecules/matchHistory.css
+++ b/frontend/src/components/molecules/matchHistory.css
@@ -1,16 +1,34 @@
 .match {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    background-color: white;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 10px;
+    border: 3px solid black;
+    padding: 2px;
+}
+.match.top {
+    background-color: gold;
+    color: black;
+}
+.match.win {
+    background-color: green;
+}
+.match.loss {
+    background-color: crimson;
 }
 
 .date {
     grid-column: 1;
 }
+.placement {
+    text-align: center;
+}
 .time {
     grid-column: 3;
     text-align: right;
 }
-
 
 @media (min-width: 768px) {
     .match {
