--- a/frontend/src/profile.css
+++ b/frontend/src/profile.css
@@ -1,5 +1,5 @@
 .profile-container > div {
-    background-color: pink;
+    background-color: rgb(20, 20, 25);
     padding: 10px;
     border-radius: 10px;
 }
